--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "chai": "^4.2.0",
     "express": "^4.16.4",
     "flow-bin": "^0.95.1",
+    "js-beautify": "^1.9.0-beta5",
     "jslint": "^0.12.1",
     "mocha": "^6.0.2",
     "request": "^2.88.0"
