--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "express": "^4.16.4",
     "express-handlebars": "^3.0.2",
     "flow-bin": "^0.95.1",
-    "js-beautify": "^1.9.0-beta5",
+    "js-beautify": "^1.9.1",
     "jslint": "^0.12.1",
     "mocha": "^6.0.2",
     "request": "^2.88.0"
