--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "js-beautify": "^1.9.1",
     "jslint": "^0.12.1",
     "mocha": "^6.0.2",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "validator": "^10.11.0"
   },
   "directories": {
     "test": "test"
