--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.16.4",
     "express-handlebars": "^3.0.2",
     "flow-bin": "^0.95.1",
+    "helmet": "^3.16.0",
     "js-beautify": "^1.9.1",
     "jslint": "^0.12.1",
     "mocha": "^6.0.2",
