--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "js-beautify": "^1.9.1",
     "jslint": "^0.12.1",
     "mocha": "^6.1.4",
+    "mongodb": "^3.2.5",
     "request": "^2.88.0",
     "validator": "^10.11.0"
   },
